Find-in-page UI would disappear if re-invoked while the close animation was progressing but not yet finished.

Make sure any close animation is finished and the drop-down bar state is consistent before showing.

Bug: 790889
Change-Id: I5a8edbfe398d048ef226ea849c4c9d285b1ec564
Reviewed-on: https://chromium-review.googlesource.com/893213
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Allen Bauer <kylixrd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533023}
Former-commit-id: c4aaba6c281b2034a66eab6fda2f344023560af3